added a image and style file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my fourth website</title>
+    <link rel="alternate" href="styles/slider.css" type="application/atom+xml" title="Atom">
 </head>
 <body>
-    
+    <h3>Slider of image</h3>
 </body>
 </html>
