--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my fourth website</title>
-    <link rel="alternate" href="styles/slider.css" type="application/atom+xml" title="Atom">
+    <link rel="stylesheet" href="styles/slider.css">
 </head>
 <body>
     <h3>Slider of image</h3>
+    <img src="bd (2).jpeg" alt="not showing">
+    <img src="bd.jpeg" alt="not showing">
+    <img src="bj.jpeg" alt="not showing">
 </body>
 </html>
