added a pic and styel

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img src="bd (2).jpeg" alt="not showing">
     <img src="bd.jpeg" alt="not showing">
     <img src="bj.jpeg" alt="not showing">
+    <img src="ld.jpeg" alt="not showing">
 </body>
 </html>
